Fix responsive issue for the gameboard on small screens

--- a/css/global.css
+++ b/css/global.css
@@ -46,7 +46,7 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   font-size: var(--font-size-md);
   font-family: "Roboto", sans-serif;
 }
