--- a/css/main-container.css
+++ b/css/main-container.css
@@ -9,9 +9,9 @@
 }
 
 .main-container .gameboard {
-  flex: 1;
-  max-height: 80vw;
+  flex: 1 0 auto;
   display: grid;
+  max-height: 80vw;
   aspect-ratio: 1 / 1;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
@@ -20,7 +20,7 @@
 
 .main-container .gameboard .btn-field {
   font-size: var(--font-size-xl);
-  padding: 0;
+  /* padding: 0; */
 }
 
 .main-container .controls .btn-restart {
